Actualización de entitys + Migraciones + Password-Recovery